# Beebot

./: .gitignore  CMakeLists.txt  KOTLIN_CONVERSION.md  Makefile  Procfile  README.md  TODO  TODO.todo  bighi.txt  config.properties  faker.drawio  kkjj.drawio  pls.txt  pom.xml  spring.properties
SoundBoard/: bongo.opus  sot.opus
WebPages/: bot.js  commands.html  commands.json  documents.html  index.html  insane.php  script.js  server.js  style.css
database/: summoner_tracking.sql
database/Server/: alert.sql  blacklist.sql  command.sql  command_analytic.sql  lol_user.sql  summoner.sql
database/backup/: IN_CASE_BEEBOT_DB_EXPLODE.sql  after_sgozz.sql  before_sgozz.sql  extremeSoundSgozzing.txt
database/berbit/: command.sql  twitch_subscription.sql
database/league_of_legends/: masteries.sql  match.sql  participant.sql  rank.sql  summoner.sql
database/lol/: summoner_tracking.sql
database/spotify/: album_artists.sql  albums.sql  artists.sql  tracks.sql  tracks_streamings.sql  users.sql
database/website/: ApiKey.sql  DiscordToken.sql  User.sql  UserSession.sql
docs/: JPA_IMPLEMENTATION_README.md  LEAGUEDB_QUERY_MAPPING.md  MIGRATION_GUIDE.md  SPRING_DATABASE.md  SQL_TO_JPA_CONVERSION.md
include/: beebot.h
index/: _0.cfe  _0.cfs  _0.si  _1.cfe  _1.cfs  _1.si  _2.cfe  _2.cfs  _2.si  _3.cfe  _3.cfs  _3.si  _4.cfe  _4.cfs  _4.si  segments_5
rsc/: bighi.txt  commands.json  logback.xml  settings.json  spotifyDB.sql
rsc/SoundBoard/: 1.opus  (+14 more)
src/: bot.c  commands.c  events.c  main.c  simple_json.c
web/: dashboard.php  database.php  guild.php  index.html
(+4675 files in other folders)
